--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -6,17 +6,17 @@
   display: none;
 }
 
-@media screen and (max-width: 749px) {
+/* @media screen and (max-width: 749px) {
   .multicolumn.no-heading.background-secondary {
-    padding-top: 5rem;
+    padding-top: 2.5rem;
   }
-}
+} */
 
-@media screen and (min-width: 750px) {
+/* @media screen and (min-width: 750px) {
   .multicolumn.no-heading:not(.background-secondary) {
-    margin-top: 6rem;
+    margin-top: 2rem;
   }
-}
+} */
 
 .multicolumn.background-secondary .title-wrapper-with-link {
   margin-top: 0;
@@ -24,7 +24,7 @@
 
 @media screen and (max-width: 749px) {
   .multicolumn .title-wrapper-with-link {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
 }
 
@@ -82,7 +82,7 @@
 }
 
 .multicolumn:not(.background-secondary) {
-  margin: 5rem 0;
+  margin: 2.5rem 0;
 }
 
 .multicolumn-list h3,
